--- a/src/app/components/item-details/item-details.component.html
+++ b/src/app/components/item-details/item-details.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-start">
-  <button class="btn btn-primary col-1" [routerLink]="['searchList']">
+  <button class="btn btn-primary col-1" [routerLink]="['/searchList']">
     Back to Search List
   </button>
 </div>
